# video_recorder

./: CMakeLists.txt  package.xml
launch/: rgb_lidar_imu_decode.launch  rgb_lidar_imu_recorder.launch  video_decode.launch  video_recorder.launch
src/: video_decorder.cpp  video_recorder.cpp
