<package format="2">
  <name>video_recorder</name>
  <version>0.1.0</version>
  <description>
    save ros image message 
  </description>
    <author>Jakub Paplham</author>
  <maintainer email="paplhjak@fel.cvut.cz">Jakub Paplham</maintainer>
  <license> BSD </license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>



</package>
