<package format="2">
  <name>video_recorder</name>
  <version>0.1.0</version>
  <description>
    save ros image message 
  </description>
    <author>Jakub Paplham</author>
  <maintainer email="paplhjak@fel.cvut.cz">Jakub Paplham</maintainer>
  <license> BSD </license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>draco_point_cloud_transport</build_depend>
  <build_depend>rosbag</build_depend>


  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>draco_point_cloud_transport</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <depend>dynamic_reconfigure</depend>



</package>
